<resources>
    <string name="action_settings">Settings</string>
    <string name="title_activity_provision_landing">Connect to device</string>
    <string name="no_internet_note">To make sure you are really connected to the device, please make sure you accept the system dialog informing you that network has no internet access.</string>
    <string name="connect_to_device_action">Connect</string>
    <string name="connected_to_device_action">Provision Network</string>
    <string name="ssid_hint_text">Network Name</string>
    <string name="password_hint_text">Password</string>
    <string name="provision">Provision</string>
    <string name="success_text">Device has been successfully provisioned!</string>
    <string name="add_device_success_text">Device has been successfully added!</string>
    <string name="wifi_disconnected_text">Please check the device indicators for provisioning status.</string>
    <string name="done">Done</string>
    <string name="enable_bluetooth_action">Enable</string>
    <string name="enabled_bluetooth_action">Provision Network</string>
    <string name="progress_scanning">Scanning Devices...</string>
    <string name="progress_get_status">Getting Status</string>
    <string name="progress_loading">Loading...</string>
    <string name="progress_claiming">Claiming in progress...</string>
    <string name="progress_add_sch">Adding Schedule...</string>
    <string name="progress_update_sch">Updating Schedule...</string>
    <string name="progress_add_scene">Adding Scene...</string>
    <string name="progress_update_scene">Updating Scene...</string>
    <string name="progress_create_group">Creating group...</string>
    <string name="progress_update_group">Updating group...</string>
    <string name="progress_remove_group">Removing group...</string>
    <string name="progress_remove_device">Removing device...</string>
    <string name="progress_remove_node">Removing Node...</string>
    <string name="progress_accepting">Accepting...</string>
    <string name="progress_declining">Declining...</string>
    <string name="progress_wifi_scan">Scanning for Wi-Fi...</string>
    <string name="progress_scan_networks">Scanning Networks...</string>
    <string name="progress_add_automation">Adding Automation...</string>
    <string name="progress_get_automation">Getting automation...</string>
    <string name="progress_update">Update in progress...</string>
    <string name="progress_check_update">Checking for update...</string>
    <string name="progress_check_fw_update_status">Checking firmware update status...</string>
    <string name="progress_push_fw_update">Pushing OTA update...</string>
    <string name="progress_tbr_config">Configuring TBR in progress...</string>
    <string name="progress_group_sharing_request">Sending Request...</string>
    <string name="progress_fetching_group_sharing_request">Fetching Request...</string>
    <string name="progress_canceling_group_sharing_request">Canceling Group Share Request...</string>
    <string name="progress_revoking_group_share_access">Revoking Group Share Access...</string>
    <string name="progress_thread_networks">Searching thread\nnetworks...</string>
    <string name="progress_we_chat_login">Please wait...</string>
    <string name="error_title">Error!</string>
    <string name="error_ble_not_supported">Sorry! BLE is not supported.</string>
    <string name="error_bluetooth_not_supported">Sorry! Bluetooth is not supported.</string>
    <string name="error_device_not_supported">Communication failed. Device may not be supported.</string>
    <string name="error_pop_incorrect">Please retry with correct proof of possession PIN.</string>
    <string name="error_qr_code_not_valid">Error! QR code is not valid. Please try again.</string>
    <string name="error_device_connect_failed">Error! Failed to connect with device.</string>
    <string name="error_device_communication_failed">Error! Unable to communicate with device.</string>
    <string name="error_ble_device_disconnected">Bluetooth device disconnected.</string>
    <string name="error_no_ble_device">No Bluetooth devices found!</string>
    <string name="error_ble_device_config_failed">Bluetooth device could not be configured. Please try another device.</string>
    <string name="error_device_list_not_received">Error : Device list not received</string>
    <string name="error_schedule_not_received">Error : Schedules not received</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_invalid_email">Please enter valid email</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_confirm_password_empty">Confirm Password cannot be empty</string>
    <string name="error_confirmation_code_empty">Confirmation code cannot be empty</string>
    <string name="error_verification_code_empty">Verification code cannot be empty</string>
    <string name="error_ssid_empty">Network name cannot be empty</string>
    <string name="error_network_select">No network selected</string>
    <string name="error_password_not_matched">Passwords not matched</string>
    <string name="error_user_agreement">To proceed, please agree to privacy policy and terms of use.</string>
    <string name="error_authentication_failed">Wi-Fi Authentication failed.</string>
    <string name="error_network_not_found">Network not found.</string>
    <string name="error_unknown">Unknown Error.</string>
    <string name="error_device_name_empty">Device name cannot be empty</string>
    <string name="error_delete_node">Failed to delete this node.</string>
    <string name="error_session">Cannot establish session</string>
    <string name="error_provisioning_failed">Provisioning Failed</string>
    <string name="error_param_update">Failed to update</string>
    <string name="error_login">Fail to login</string>
    <string name="error_wifi_off">Please turn on Wi-Fi to connect with device.</string>
    <string name="error_claiming_progress">Claiming failed with error : </string>
    <string name="error_claiming">Claiming failed. Please reboot the device and restart provisioning.</string>
    <string name="error_claiming_not_supported">Assisted Claiming not supported for SoftAP. Cannot Proceed.</string>
    <string name="error_claiming_start">Claim start failed</string>
    <string name="error_claiming_init">Claim init failed</string>
    <string name="error_claiming_verify">Claim verify failed</string>
    <string name="error_device_type_not_supported">Device may not be supported.</string>
    <string name="error_value_out_of_bound">Value out of bound</string>
    <string name="error_schedule_name_empty">Schedule name cannot be empty</string>
    <string name="error_invalid_schedule_name">Please enter a name for the schedule to proceed.</string>
    <string name="error_schedule_action">Please select action for schedule</string>
    <string name="error_scene_name_empty">Scene name cannot be empty</string>
    <string name="error_invalid_scene_name">Please enter a name for the scene to proceed.</string>
    <string name="error_invalid_automation_name">Please enter a name for the automation to proceed.</string>
    <string name="error_scene_action">Please select action for scene</string>
    <string name="error_group_device_remove">Failed to remove device from group</string>
    <string name="error_group_name_empty">Group name cannot be empty</string>
    <string name="error_group_name_update">Failed to update group name</string>
    <string name="error_group_create">Failed to create group</string>
    <string name="error_group_update">Failed to update group</string>
    <string name="error_group_remove">Failed to remove group</string>
    <string name="error_get_sharing_request">Failed to get sharing requests</string>
    <string name="error_notification">Failed to get notifications</string>
    <string name="error_add_member">Failed to add a member</string>
    <string name="error_remove_member">Failed to delete member</string>
    <string name="error_remove_sharing_req">Failed to remove sharing request</string>
    <string name="error_update_timezone">Failed to update timezone</string>
    <string name="error_camera_permission">Camera permission is not given. App will not be able to scan QR code to add device.</string>
    <string name="error_location_permission">Location permission is not given. It will be required to add BLE or SoftAP devices.</string>
    <string name="error_automation_create">Failed to create automation</string>
    <string name="error_automation_update">Failed to update automation</string>
    <string name="error_automation_remove">Failed to remove automation</string>
    <string name="error_automation_name_empty">Automation name cannot be empty</string>
    <string name="error_check_update">Failed to check updates.</string>
    <string name="error_fw_update">Failed to push OTA update.</string>
    <string name="error_device_connection">Check your connections and please try again after some time.</string>
    <string name="error_fw_update_rejected">OTA update rejected.</string>
    <string name="error_fw_update_failed">OTA update failed.</string>
    <string name="error_base_url_empty">Cloud Endpoint URL cannot be empty</string>
    <string name="error_fabric_create">Failed to create fabric</string>
    <string name="error_no_preferred_creds">No thread network added</string>
    <string name="error_read_preferred_creds_request_denied">You have denied request for reading thread credentials</string>
    <string name="error_no_thread_network">No Active Thread Border Router</string>
    <string name="error_dataset_invalid">Invalid Dataset</string>
    <string name="error_wechat_app_not_installed">Please install WeChat application</string>
    <string name="error_user_id_not_found">Error ! User ID not found</string>
    <string name="error_pending_dataset_not_supported">Device already has dataset. Dataset update is not supported for this device.</string>
    <string name="prefix">Prefix :</string>
    <string name="devices_title">Devices</string>
    <string name="tab_devices">Devices</string>
    <string name="tab_schedules">Schedules</string>
    <string name="tab_scenes">Scenes</string>
    <string name="tab_automations">Automations</string>
    <string name="tab_settings">Settings</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add_device">Add Device</string>
    <string name="btn_scan_again">Rescan</string>
    <string name="btn_change_prefix">Change</string>
    <string name="btn_done">Done</string>
    <string name="btn_info">Node Info</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="theme_selection_title">Theme</string>
    <string name="theme_selection_description">Choose your preferred theme for the app</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_system">Follow System Theme</string>
    <string name="enable_bluetooth_instructions">To provision your new device, please make sure that your Phone\'s Bluetooth is turned on and within range of your new device.</string>
    <string name="alexa_link_instruction">Linking your account with Amazon Alexa allows you to control your Smart Home Devices using Voice commands via Alexa enabled speakers. (E.g. Alexa, Turn on the Light)</string>
    <string name="process_take_time">This may take time.</string>
    <string name="linked_with_alexa">Already linked with Amazon Alexa</string>
    <string name="alexa_link_str">You can now control your Smart Home Devices via Alexa enabled speakers using Voice commands.</string>
    <string name="alexa_example_1">Alexa, turn on the boiler switch.</string>
    <string name="alexa_example_2">Alexa, turn on the kitchen light.</string>
    <string name="alexa_example_3">Alexa, set kitchen light to red.</string>
</resources>