<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_done"
      android:icon="@drawable/ic_fluent_checkmark"
      android:title="@string/btn_done"
      android:visible="false"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_cancel"
      android:icon="@drawable/ic_fluent_dismiss"
      android:title="@string/btn_cancel"
      android:visible="false"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_info"
      android:icon="@drawable/ic_fluent_info"
      android:title="@string/btn_info"
      android:visible="false"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_theme"
      android:icon="@drawable/ic_fluent_theme"
      android:title="@string/theme_choose_theme_label"
      android:visible="false"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_user"
      android:icon="@drawable/ic_fluent_person"
      android:title="@string/title_activity_user_profile"
      android:visible="false"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_add"
      android:icon="@drawable/ic_fluent_add"
      android:title="@string/btn_add_device"
      android:visible="false"
      app:showAsAction="always"/>
</menu>
