<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_bleprovision_landing">

    <RelativeLayout
        android:id="@+id/prefix_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/title_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/prefix"
            android:textAlignment="center"
            android:textColor="@color/color_text_primary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/prefix_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@id/title_prefix"
            android:textColor="@color/color_purple_accent"
            android:textSize="16sp" />

        <Button
            android:background="@drawable/button_light_selector"
            android:id="@+id/btn_change_prefix"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginVertical="6dp"
            android:text="@string/btn_change_prefix"
            android:textColor="@color/color_text_secondary"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/bluetooth_status_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/prefix_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/enable_bluetooth_instructions"
        android:textAlignment="center"
        android:textColor="@color/color_text_secondary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/title_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bluetooth_status_message"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/devices_title"
        android:textColor="@color/color_text_primary"
        android:textAlignment="center"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_scan"
        android:layout_below="@id/title_devices">

        <ListView
            android:id="@+id/ble_devices_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/ble_landing_progress_indicator"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_scan"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@drawable/button_dark_selector"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="30dip"
        android:layout_marginHorizontal="32dip"
        android:text="@string/btn_scan_again"
        android:textColor="@color/color_white"
        android:textAllCaps="false"/>

</RelativeLayout>
