<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <!-- Theme Section -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                app:cardBackgroundColor="@color/color_card_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_16">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_selection_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/margin_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_selection_description"
                        android:textColor="@color/color_text_secondary"
                        android:textSize="14sp"
                        android:layout_marginBottom="@dimen/margin_16" />

                    <RadioGroup
                        android:id="@+id/rg_theme_selection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb_light_theme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/theme_light"
                            android:textColor="@color/color_text"
                            android:textSize="16sp"
                            android:padding="@dimen/margin_12"
                            android:layout_marginBottom="@dimen/margin_8" />

                        <RadioButton
                            android:id="@+id/rb_dark_theme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/theme_dark"
                            android:textColor="@color/color_text"
                            android:textSize="16sp"
                            android:padding="@dimen/margin_12"
                            android:layout_marginBottom="@dimen/margin_8" />

                        <RadioButton
                            android:id="@+id/rb_system_theme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/theme_system"
                            android:textColor="@color/color_text"
                            android:textSize="16sp"
                            android:padding="@dimen/margin_12" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
